[ICU-6951] Added localespiCheck and xliff targets X-Commit-URL: https://ssl.icu-project.org/trac/changeset/26115 Former-commit-id: 6e85b029024c449243d7f4772f3e31123ca9f160